<resources>
    <string name="app_name">JaeNDC</string>
    <string name="app_name_long">Just an essential ND Calculator</string>
    <string name="action_multi">Multiple Filters</string>
    <string name="action_multi_single">Single Filter</string>
    <string name="action_manage">Manage ND Filters</string>
    <string name="action_config">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_mode_select_all">Select All</string>
    <string name="action_mode_select_all_condensed">All</string>
    <string name="action_mode_title">Select to Delete</string>
    <plurals name="action_mode_subtitle">
        <item quantity="one">one item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <string name="edit_header_name">Name</string>
    <string name="edit_header_nd">ND</string>
    <string name="edit_header_factor">Factor</string>
    <string name="edit_header_fstops">F&#8209;Stops</string>
    <string name="confirm_delete_title">Confirm</string>
    <string name="confirm_delete">Delete %s?</string>
    <string name="confirm_delete_this_filter">this ND Filter</string>
    <plurals name="confirm_delete_multiple_filter">
        <item quantity="one">Delete this %d ND Filter?</item>
        <item quantity="other">Delete these %d ND Filters?</item>
    </plurals>
    <string name="list_drag">Drag</string>

    <string name="dialog_create_filters_title">Restore</string>
    <string name="dialog_create_filters_text">All ND Filters have been deleted. Restore the default set of ND Filters?</string>

    <string name="text_na">n/a</string>
    <string name="text_days">d</string>
    <string name="text_hours">h</string>
    <string name="text_minutes">m</string>
    <string name="text_seconds">s</string>
    <string name="text_longer_than">longer than %s</string>
    <string name="text_longer_than_symbol">&gt; %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="factor">Factor:</string>
    <string name="fstops">f-stops:</string>
    <string name="notification_channel_name_expiry">Exposure</string>
    <string name="notification_channel_name_timer">Timer</string>
    <string name="notification_exposure_time">Exposure time is over</string>
    <string name="notification_timer_running">Exposure timer is running</string>
    <string name="notification_timer_counting">Exposure time: %s</string>
    <string name="title_ndfilter_list">Manage ND Filters</string>
    <string name="title_ndfilter_detail">Edit ND Filter</string>
    <string name="title_ndfilter_detail_new">New ND Filter</string>

    <string name="widget_label">JaeNDC</string>
    <string name="widget_not_for_2x">The Widget for JaeNDC requires Android 3.0 or higher.</string>
    <string name="widget_config_button">Settings</string>
    <string name="title_activity_config">JaeNDC Settings</string>
    <string name="subtitle_activity_config_explain">Configure the app settings</string>
    <string name="title_activity_config_widget">JaeNDC Widget Settings</string>
    <string name="subtitle_activity_config_widget_explain">Configure the settings for the selected widget</string>

    <string name="config_time_style">Camera times</string>
    <array name="config_time_style_options">
        <item>1/3-stops with zero comma times (from 0&#x2033;3 to 0&#x2033;8)</item>
        <item>1/3-stops with decimal places fractions (from 1/3.2 to 1/1.3)</item>
        <item>1/2-stops with zero comma times (from 0&#x2033;3 to 0&#x2033;7)</item>
        <item>1/2-stops with decimal places fractions (from 1/3 to 1/1.3)</item>
    </array>
    <string name="config_show_timer">Show timer when</string>
    <string name="config_show_timer_value">at least %dsec</string>
    <string name="config_show_timer_value_never">Never</string>
    <string name="config_show_timer_countdown">With Countdown</string>
    <string name="config_use_alarm_clock">Use alarm clock (more precise)</string>
    <string name="config_alarm_tone">Alarm tone</string>
    <string name="config_alarm_tone_silent">Silent</string>
    <string name="config_alarm_tone_system">Default Alarm Tone</string>
    <string name="config_alarm_tone_select">Select alarm tone for timer:</string>
    <string name="config_alarm_duration">Longest tone duration</string>
    <string name="config_alarm_duration_value">%dsec</string>
    <string name="config_theme">Theme</string>
    <array name="config_theme_options">
        <item>Dark</item>
        <item>Light</item>
        <item>Night Mode</item>
    </array>
    <string name="config_transparency">Transparency</string>
    <string name="config_transparency_value">%d%%</string>
    <string name="config_apply">Apply</string>
</resources>
