<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_ndcalc_horizontal_margin"
    android:paddingRight="@dimen/activity_ndcalc_horizontal_margin"
    android:paddingTop="@dimen/activity_ndcalc_vertical_margin"
    android:paddingBottom="@dimen/activity_ndcalc_vertical_margin"
    android:id="@+id/screen"
    android:background="?android:attr/windowBackground">

    <TextView
        android:id="@+id/largeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_na"
        android:textAppearance="?attr/resultTextNormal"
        android:singleLine="true"
    />
    <TextView
        android:id="@+id/smallTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_na"
        android:textAppearance="?attr/resultTextSmall"
        android:singleLine="true"
        android:layout_below="@id/largeTime"
    />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:id="@+id/startStopButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textColor="?attr/timerButtonTextColor"
        android:background="@drawable/bg_start_stop_button"
        android:layout_below="@id/smallTime"
     />

    <ProgressBar
        style="?attr/timerProgressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_below="@+id/startStopButton"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/progressBar"
        android:baselineAligned="false"
    >

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:id="@+id/timeList"
        android:choiceMode="singleChoice"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
    /><!--90sp-->

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:id="@+id/filterList"
        android:choiceMode="singleChoice"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
    />
    </LinearLayout>
</RelativeLayout>
