<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin"
    android:id="@+id/widget"
    tools:context=".AppWidget">

    <ImageButton
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/configButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="8sp"
        android:src="@drawable/ic_settings"
        android:minWidth="0dp"
        android:minHeight="0dp"
        />
    <TextView
        android:id="@+id/largeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:ellipsize="start"
        android:text="@string/text_na"
        android:textSize="28sp"
        />
    <TextView
        android:id="@+id/smallTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_na"
        android:layout_below="@id/largeTime"
        android:textSize="16sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/bg_start_button"
        android:layout_below="@id/smallTime"
        android:textSize="12sp"
        android:visibility="gone"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stopButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/bg_stop_button"
        android:layout_below="@id/startButton"
        android:textSize="12sp"
        android:visibility="gone"
        />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_below="@id/stopButton"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/progressBar"
        android:baselineAligned="false"
        >
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:id="@+id/timeList"
            android:choiceMode="singleChoice"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            />
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/filterList"
            android:choiceMode="singleChoice"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            />
    </LinearLayout>
</RelativeLayout>
